syntax = "proto3";


option java_package = "com.ilife.zhihu.crawller";

message LoginRequest {
  string username = 1;
  string password = 2;
  string captcha = 3;
}
message LoginResponse {
  string response = 1;
}
message ActivitiyRequest {
  string username = 1;
}
message ActivityResponse {
  string responseJson = 1;
}
service ZhihuService {
   rpc Login(LoginRequest) returns (LoginResponse) {}
   rpc GetActivity(ActivitiyRequest) returns (ActivityResponse)  {}
}